Migrate from Java 21 to Java 17
- pom.xml: set java.version, compiler.source, compiler.target to 17
- SalesIngestionController: replace sealed switch pattern (JEP 441, Java 21 only)
  with if/instanceof chain (stable since Java 16)
- Replace List.getFirst() (Sequenced Collections, JEP 431, Java 21) with
  List.get(0) in 4 production files and 4 test files
- All 7 Dockerfiles: eclipse-temurin:21 → 17, lambda java:21 → java:17
- GitHub Actions coverage.yml: java-version 21 → 17
- Spring Boot 3.3.2 retained (supports Java 17 as minimum)
- All 98 unit tests pass on Java 17

https://claude.ai/code/session_01VLFDJUpzog5CCunMHabM93